...
      }
    | undefined;
};

export type MainStackParamList = {
  MainTabs: undefined;
  Settings: undefined;
  NeedsReview: undefined;
  // Use shared types for preference screens
} & PreferenceStackParamList;

const Stack = createNativeStackNavigator<MainStackParamList>();
const Tab = createBottomTabNavigator<TabParamList>();
...
      <Stack.Screen name="MainTabs" component={TabNavigator} />
      <Stack.Screen
        name="Settings"
        component={SettingsScreen}
        options={({ navigation }) =>
          createBackHeaderOptions({
            title: 'Notifications',
            navigation,
            fallbackRouteName: 'MainTabs',
          })}
      />
      <Stack.Screen
        name="NeedsReview"
...
